@@ -4764,6 +4764,10 @@ TclArgumentBCEnter(interp,objv,objc,codePtr,cfPtr,pc)
 	     * have to save them at compile time.
 	     */
 
+	    if (ePtr->nline != objc) {
+		Tcl_Panic ("TIP 280 data structure inconsistency");
+	    }
+
 	    for (word = 1; word < objc; word++) {
 		if (ePtr->line[word] >= 0) {
 		    int isnew;
